2009-10-27  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Fix some docstrings and comments.

2009-10-26  Tobias C. Rittweiler <tcr@freebits.de>

	* test.sh: Shebang on bash, not just on sh.

2009-10-25  Tobias C. Rittweiler <tcr@freebits.de>

	Revert the reversed numbering of restarts in sldb.

	New command `sldb-cycle' ([tab]) in sldb will cycle between
	restart list and backtrace.

	Make sldb-invoke-restart-by-name case-insensitive.

	* slime.el (sldb-mode-map): Bind Tab to `sldb-cycle'.
	(sldb-restart-list-start-marker): New variable.
	(sldb-setup): Store marker in it.
	(sldb-cycle): New command to cycle between restart list and
	backtrace.
	(sldb-invoke-restart-by-name): Make completion case-insensitive.
	(sldb-insert-restarts): Revert to old behaviour.

2009-10-24  Tobias C. Rittweiler <tcr@freebits.de>

	* swank-ccl.lisp (who-specializes): Do not signal an error if
	argument does not name a class.

2009-10-24  Tobias C. Rittweiler <tcr@freebits.de>

	* swank.lisp (xref): Deal with non-yet-interned names gracefully.

2009-10-24  Tobias C. Rittweiler <tcr@freebits.de>

	* slime.el (slime-search-property): Add parameter to get value at
	point propery changed.
	(slime-find-next-note): Use it.
	(slime-find-previous-note): Ditto.

2009-10-24  Tobias C. Rittweiler <tcr@freebits.de>

	New command C-M-, to go to previous xref location.

	[Old command C-M-. to go to next xref location.]

	Xref buffers are not automatically selected anymore; it's more
	ergonomic to cycle through them via C-M-. and C-M-, from
	within the source buffer.

	* slime.el (slime-search-property): Simplify slightly.
	(slime-find-next-note): Use it.
	(slime-find-previous-note): Use it, too.
	(slime-find-note): Deleted.
	(slime-editing-keys): Add C-M-,.
	(slime-previous-location-function): New variable.
	(slime-previous-location): New command.
	(slime-with-xref-buffer): Do not select Xref buffer.
	(slime-show-xref-buffer): Adapted accordingly.